--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="reservations">Reservations</string>
     <string name="orders">Orders</string>
 
-<!--settings string-->
+    <!--settings string-->
     <string name="action_settings">Settings</string>
     <string name="hello_world">Plese input the printer\'s IP Addr.</string>
     <string name="inputIp">Plese input the printer\'s IP Addr.</string>
@@ -24,6 +24,11 @@
     <string name="connect">Connect</string>
     <string name="enter_port">Enter Port</string>
     <string name="enter_port_number">Enter Port Number</string>
+    <string name="_9100">9100</string>
+    <string name="forgot_password">FORGOT PASSWORD?</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="remember_me">Remember me</string>
 
 
     <!--settings string end-->
